--- a/public/assets/css/dashboard/dashboard.css
+++ b/public/assets/css/dashboard/dashboard.css
@@ -488,3 +488,12 @@ h1 {
 .referrals-table tbody tr:hover {
     background-color: #f9fafb;
 }
+.logo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    margin-bottom: 24px;
+}
